# src/swagger.json
@@ -157,6 +157,50 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IVehicle": {
+				"properties": {
+					"make": {
+						"type": "string"
+					},
+					"model": {
+						"type": "string"
+					},
+					"chasis_number": {
+						"type": "string"
+					},
+					"plate_number": {
+						"type": "string"
+					},
+					"registration_date": {
+						"type": "string"
+					},
+					"municipal_assembly": {
+						"type": "string"
+					},
+					"station": {
+						"type": "string"
+					},
+					"ownerId": {
+						"type": "string"
+					},
+					"driverId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"make",
+					"model",
+					"chasis_number",
+					"plate_number",
+					"registration_date",
+					"municipal_assembly",
+					"station",
+					"ownerId",
+					"driverId"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -290,6 +334,122 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/vehicle/all": {
+			"get": {
+				"operationId": "GetAll",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IApiResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Vehicle"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/vehicle/create": {
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IApiResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Vehicle"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IVehicle"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/vehicle/getByNumberPlate/{numberPlate}": {
+			"get": {
+				"operationId": "GetByNumberPlate",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IApiResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Vehicle"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "numberPlate",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/vehicle/getById/{vehicleId}": {
+			"get": {
+				"operationId": "FindVehicleById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IApiResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Vehicle"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "vehicleId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
